@@ -1,4 +1,7 @@
-2018-04-27 16:11 CEST (user) v0.9.8
+2018-04-27 19:38 CEST (mathias) v0.9.9
+	- t/script-mkdir_heute: disable Term::ReadKey for tests
+
+2018-04-27 16:11 CEST (mathias) v0.9.8
 	- setting version to normalized string
 
 2018-04-27 15:15 CEST (mathias) Version 0.9.7
